# semver-tool

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: hygiene.yml  release-plz.yml  release.yml  testing.yml
example-data/: misc-bad-versions.txt  misc-good-versions.txt  short-good-versions.txt
src/: main.rs  misc.rs  regex.rs  results.rs
tests/: cli_basics.rs  cli_compare.rs  cli_explain.rs  cli_filter_test.rs  cli_generate.rs  cli_insta.rs  cli_sort.rs  cli_validate.rs  common.rs
tests/snapshots/: cli_insta__cli_insta-10.snap  cli_insta__cli_insta-11.snap  cli_insta__cli_insta-12.snap  cli_insta__cli_insta-13.snap  cli_insta__cli_insta-14.snap  cli_insta__cli_insta-15.snap  cli_insta__cli_insta-16.snap  cli_insta__cli_insta-17.snap  cli_insta__cli_insta-18.snap  cli_insta__cli_insta-19.snap  cli_insta__cli_insta-2.snap  cli_insta__cli_insta-21.snap  cli_insta__cli_insta-22.snap  cli_insta__cli_insta-24.snap  cli_insta__cli_insta-25.snap  cli_insta__cli_insta-28.snap  cli_insta__cli_insta-3.snap  cli_insta__cli_insta-4.snap  cli_insta__cli_insta-5.snap  cli_insta__cli_insta-6.snap  cli_insta__cli_insta-7.snap  cli_insta__cli_insta-8.snap  cli_insta__cli_insta-9.snap  cli_insta__cli_insta.snap
wix/: main.wxs
