# SPDX-License-Identifier: Apache-2.0
# Copyright 2025 canardleteer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "sem-tool"
version = "0.1.6"
edition = "2021"
exclude = [
    "example-data/*",
]
license = "Apache-2.0"
keywords = ["semver", "tools", "cli"]
authors = ["canardleteer <eris.has.a.dad+github@gmail.com>"]
repository = "https://github.com/canardleteer/sem-tool"
homepage = "https://github.com/canardleteer/sem-tool"
categories = ["command-line-utilities"]
readme = "README.md"
description = "A simple Semantic Versioning CLI tool for parsing, filtering, sorting and explaining"

[package.metadata.wix]
upgrade-guid = "4B0BC255-6C49-4242-8F92-789262A65064"
path-guid = "D28BFC08-1707-4BF8-ACB8-9A4496178C5F"
license = false
eula = false

[dependencies]
rand = "0.9.0"
clap = { version = "4.5", features = ["derive"] }
clap_derive = "4.5.28"
indexmap = { version = "2.7.1", features= ["serde"] }
semver = { version = "1.0.25", features= ["serde"] }
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"

# NOTE(canardleteer): serde_yml is a reasonable drop in replacement, and can
#                     be used instead. serde_yaml is probably fine for now.
#                     serde_yml, currently "overquotes" strings, making it
#                     harder to use with common tools like `yq`, and I haven't
#                     taken the time to figure out how to make it stop.
serde_yaml = "0.9.34"

[dev-dependencies]
assert_cmd = "2.0.16"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

